eks/network-policy-httpbin-enable-from-home-ip.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: httpbin-access
  namespace: httpbin  # This should match the namespace where the httpbin service is located
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: httpbin
      app.kubernetes.io/name: httpbin
      #pod-template-hash: 54454d89c6
  policyTypes:
    - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 111.235.216.39/32
      ports:
        - protocol: TCP
          port: 80  # This should match the port exposed by the httpbin service
